Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Don't crash when a container where a user explicitly subscribed has been removed.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Use before commit hook ordering. EventManager will be called after the IndexationManager
- Filter repo objects at push level so that they won't be processed at all